--- a/CPP_00/ex01/Makefile
+++ b/CPP_00/ex01/Makefile
@@ -9,14 +9,17 @@ CLANG	=	clang++
 
 FLAGS	=	-Wall -Wextra -Werror
 
+%.o			:	%.c
+			@$(CLANG) $(FLAGS) -c $^ -o $@
+
 all		:	$(NAME)
 
 $(NAME)	:
-			@$(CLANG) $(SRCS) -o $(NAME)
+			@$(CLANG) $(FLAGS) $(SRCS) -o $(NAME)
 			@echo "\033[0;34mMY_AWESOME_PHONEBOOK COMPILED\033[0;0m"
 
 clean	:
-			rm -f $(NAME)
+			@rm -f $(NAME)
 			@echo "\033[0;35mMY_AWESOME_PHONEBOOK CLEAN\033[0;0m"
 
 re		:	clean all
