--- a/CPP_07/ex00/Makefile
+++ b/CPP_07/ex00/Makefile
@@ -1,7 +1,6 @@
-NAME	=	serialized
+NAME	=	FuctionT
 
-SRCS	=	Data.cpp \
-			main.cpp
+SRCS	=	main.cpp
 
 OBJS	=	$(SRCS:.cpp=.o)
 
@@ -16,21 +15,21 @@ all		:	$(NAME)
 
 $(NAME)	:
 			@$(CLANG) $(FLAGS) $(SRCS) -o $(NAME)
-			@echo "\033[0;34mSERIALIZED COMPILED\033[0;0m"
+			@echo "\033[0;34mFUNCTION TEMPLATE COMPILED\033[0;0m"
 
 clean	:
 			@rm -rf $(OBJS)
-			@echo "\033[0;35mSERIALIZED CLEAN\033[0;0m"
+			@echo "\033[0;35mFUNCTION TEMPLATE CLEAN\033[0;0m"
 
 fclean	:	clean
 			@rm -rf $(NAME)
 
 re		:	fclean all
 
-test	:
+test		:
 			./$(NAME)
 
 leaks	:
 			leaks --atExit -- ./$(NAME)
 
-.PHONY	:	all clean fclean re test leaks
+.PHONY	:	all clean fclean re run
